--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vue-carousel-3d": "^1.0.1",
+    "vue-slick-carousel": "^1.0.6",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
